Fix spacing between date-row elements

--- a/consentrecords/static/consentrecords/css/base.css
+++ b/consentrecords/static/consentrecords/css/base.css
@@ -401,6 +401,13 @@ input[type="date"]:focus {
 	position: relative;
 }
 
+.date-row > div:first-child {
+	margin-right: 12px;
+}
+.date-row > div:last-child {
+	margin-left: 12px;
+}
+
 .date-row > div > span {
 	position: absolute;
 	right: 0px;
